--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,11 @@ footer {
     margin-bottom: 50px;
 }
 
+/*ナビバー*/
+.my-shopping{
+    letter-spacing:5px;
+    font-weight: lighter;
+}
 
 /*表紙*/
 .cover{
@@ -44,12 +49,28 @@ footer {
 }
 
 
+/*共通*/
+/*アイテムURL*/
+.item-title {
+    /* 文の行数を2行に保ち、最後に ... を追加する */
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+
+/*アイテム画像*/
+.card-header {
+    height: 250px;
+}
+.card-header img {
+    height: 100%;
+    max-width: 100%;
+}
+
+
+/*各ぺーじ*/
 /*検索ページ*/
-.computer img{
-    width: 100%;
-    height: 300px;
-    }
-    
 .bag img{
     width: 150px;
     height: 150px;
@@ -62,30 +83,6 @@ footer {
 .my-skyblue {
     color:#ff1493;
     }
-
-.item-title {
-    /* 文の行数を2行に保ち、最後に ... を追加する */
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-}
-
-.card-header {
-    height: 250px;
-}
-.card-header img {
-    height: 100%;
-    max-width: 100%;
-}
-
-
-/*ボタン共通*/
-.btn-group{
-    margin-right: 15px;
-    margin-left:15px;
-}
-
 
 
 /*ランキングページ*/    
