--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
+
 body{
     color:#363c3c;
+    background-color: #f4f2fc;
 }
 
 footer {
@@ -36,6 +38,7 @@ footer {
     vertical-align: bottom;
     text-align: center;
 }
+
 .cover .cover-inner .cover-contents h1 {
     margin: 0 0 30px 0;
     color: #fff;
@@ -63,13 +66,14 @@ footer {
 .card-header {
     height: 250px;
 }
+
 .card-header img {
     height: 100%;
     max-width: 100%;
 }
 
 
-/*各ぺーじ*/
+/*各ぺージ*/
 /*検索ページ*/
 .bag img{
     width: 150px;
@@ -99,7 +103,6 @@ footer {
     border-radius: 30%;
     padding: 5px;
 } 
-
 
 
 /*ユーザ詳細ページ*/
